# textrs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cicd.yml
src/: lib.rs
