[package]
name = "textrs"
version = "0.0.1"
authors = ["chrisaddy <chris.william.addy@gmail.com>"]
edition = "2018"
publish = ["crates-io"]
license = "MIT"
description = "natural language processing and tools for working with text"
categories = ["text-processing"]
repository = "https://github.com/chrisaddy/textrs"
homepage = "https://github.com/chrisaddy/textrs"

[badges]
travis-ci = {repository = "chrisaddy/textrs"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
